background alignment fixed

--- a/css/contact.css
+++ b/css/contact.css
@@ -295,7 +295,7 @@ textarea.text-input {
 }
 
 /*Grid*/
-.container-music {
+#container {
   width: 100%;
   display: table;
   border-collapse:separate;
@@ -339,7 +339,7 @@ textarea.text-input {
 .grid_12 {
   background:url('../images/imusic.png');
   height: 150px;
-  margin-top:30px;
+  margin-top:50px;
   background-size: 100% 100%;
   background-position: center;
   background-repeat: no-repeat;
